# libffi

./: .gitignore  CMakeLists.txt
include/: ffi.h.in
msvc_build/aarch64/aarch64_include/: ffi.h
src/: closures.c  dlmalloc.c
